@@ -32,20 +32,21 @@ public interface UserService {
 	User getUserByEmail(String email);
 	
 	public static String getHashedString(String text) {
-		try {
-			text = Base64.getEncoder().encodeToString(text.getBytes());
-
-			MessageDigest md = MessageDigest.getInstance("MD5");
-			md.update(text.getBytes());
-
-			byte[] digest = md.digest();
-			text = DatatypeConverter.printHexBinary(digest).toUpperCase();
-
-			return text;
-
-		} catch (Exception e) {
-			return Base64.getEncoder().encodeToString(text.getBytes());
-		}
+//		try {
+//			text = Base64.getEncoder().encodeToString(text.getBytes());
+//
+//			MessageDigest md = MessageDigest.getInstance("MD5");
+//			md.update(text.getBytes());
+//
+//			byte[] digest = md.digest();
+//			text = DatatypeConverter.printHexBinary(digest).toUpperCase();
+//
+//			return text;
+//
+//		} catch (Exception e) {
+//			return Base64.getEncoder().encodeToString(text.getBytes());
+//		}
+		return text;
 	}
 
 	public static String generateOtp() {
